--- a/package/translate/nl_NL.po
+++ b/package/translate/nl_NL.po
@@ -1,4 +1,4 @@
-# Translation of todolist in LANGUAGE
+# Translation of todolist in nl_NL
 # Copyright (C) 2018
 # This file is distributed under the same license as the todolist package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
@@ -6,18 +6,17 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: todolist\n"
-"Report-Msgid-Bugs-To: https://github.com/Zren/plasma-applets/tree/master/"
-"todolist\n"
+"Report-Msgid-Bugs-To: https://github.com/Zren/plasma-applets/tree/master/todolist\n"
 "POT-Creation-Date: 2018-12-03 18:47-0500\n"
 "PO-Revision-Date: 2018-12-29 20:48+0100\n"
+"Last-Translator: Heimen Stoffels <vistausss@outlook.com>\n"
 "Language-Team: Dutch <vistausss@outlook.com>\n"
+"Language: nl_NL\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "X-Generator: Poedit 2.1.1\n"
-"Last-Translator: Heimen Stoffels <vistausss@outlook.com>\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
-"Language: nl_NL\n"
 
 #: ../contents/config/config.qml:6
 msgid "General"
@@ -73,6 +72,4 @@ msgstr "Lijst verwijderen"
 
 #: ../contents/ui/NoteSection.qml:146
 msgid "Are you sure you want to delete the list \"%1\" with %2 items?"
-msgstr ""
-"Weet je zeker dat je de lijst \"%1\", met daarop %2 items, wilt "
-"verwijderen?"
+msgstr "Weet je zeker dat je de lijst \"%1\", met daarop %2 items, wilt verwijderen?"
