--- a/package/translate/nl_NL.po
+++ b/package/translate/nl_NL.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: todolist\n"
 "Report-Msgid-Bugs-To: https://github.com/Zren/plasma-applet-todolist\n"
 "POT-Creation-Date: 2019-02-07 09:35-0500\n"
-"PO-Revision-Date: 2018-12-29 20:48+0100\n"
+"PO-Revision-Date: 2019-02-07 21:52+0100\n"
 "Last-Translator: Heimen Stoffels <vistausss@outlook.com>\n"
 "Language-Team: Dutch <vistausss@outlook.com>\n"
 "Language: nl_NL\n"
@@ -40,7 +40,7 @@ msgstr "Stijl van lijsttitel"
 
 #: ../contents/ui/config/ConfigGeneral.qml:42
 msgid "Show text field background"
-msgstr ""
+msgstr "Achtergrond in tekstveld tonen"
 
 #: ../contents/ui/config/ConfigGeneral.qml:47
 msgid "Bold"
