--- a/package/translate/nl_NL.po
+++ b/package/translate/nl_NL.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: todolist\n"
 "Report-Msgid-Bugs-To: https://github.com/Zren/plasma-applet-todolist\n"
 "POT-Creation-Date: 2019-03-13 19:33-0400\n"
-"PO-Revision-Date: 2019-02-07 21:52+0100\n"
+"PO-Revision-Date: 2019-03-31 17:10+0200\n"
 "Last-Translator: Heimen Stoffels <vistausss@outlook.com>\n"
 "Language-Team: Dutch <vistausss@outlook.com>\n"
 "Language: nl_NL\n"
@@ -32,19 +32,19 @@ msgstr "Bureaubladwidget: achtergrond tonen"
 
 #: ../contents/ui/config/ConfigGeneral.qml:28
 msgid "Completed Items"
-msgstr ""
+msgstr "Afgeronde taken"
 
 #: ../contents/ui/config/ConfigGeneral.qml:35
 msgid "Delete On Complete"
-msgstr "Taak wissen na afronden"
+msgstr "Taken wissen na afronden"
 
 #: ../contents/ui/config/ConfigGeneral.qml:40
 msgid "Strikeout"
-msgstr ""
+msgstr "Doorhalen"
 
 #: ../contents/ui/config/ConfigGeneral.qml:45
 msgid "Faded"
-msgstr ""
+msgstr "Vervagen"
 
 #: ../contents/ui/config/ConfigGeneral.qml:51
 msgid "List Title Style"
@@ -60,7 +60,7 @@ msgstr "Vetgedrukt"
 
 #: ../contents/ui/config/ConfigGeneral.qml:70
 msgid "Show outline"
-msgstr "Omlijning tonen"
+msgstr "Randen tonen"
 
 #: ../contents/ui/lib/AppletVersion.qml:41
 msgid "<b>Version:</b> %1"
@@ -76,7 +76,7 @@ msgstr "Lijst toevoegen"
 
 #: ../contents/ui/main.qml:129
 msgid "Delete on Complete"
-msgstr "Taak wissen na afronden"
+msgstr "Taken wissen na afronden"
 
 #: ../contents/ui/main.qml:130
 msgid "Hide"
@@ -88,4 +88,4 @@ msgstr "Lijst verwijderen"
 
 #: ../contents/ui/NoteSection.qml:158
 msgid "Are you sure you want to delete the list \"%1\" with %2 items?"
-msgstr "Weet je zeker dat je de lijst \"%1\", met daarop %2 items, wilt verwijderen?"
+msgstr "Weet je zeker dat je de lijst \"%1\", met daarop %2 taken, wilt verwijderen?"
