--- a/package/translate/template.pot
+++ b/package/translate/template.pot
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: todolist \n"
 "Report-Msgid-Bugs-To: https://github.com/Zren/plasma-applet-todolist\n"
-"POT-Creation-Date: 2019-03-13 19:33-0400\n"
+"POT-Creation-Date: 2019-06-25 19:47+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -69,10 +69,7 @@ msgstr ""
 msgid "Open in Text Editor"
 msgstr ""
 
-#: ../contents/ui/main.qml:128
-msgid "Add List"
-msgstr ""
-
+#. i18n("Add List"), "list-add")
 #: ../contents/ui/main.qml:129
 msgid "Delete on Complete"
 msgstr ""
