--- a/package/translate/fr.po
+++ b/package/translate/fr.po
@@ -1,4 +1,4 @@
-# Translation of todolist in LANGUAGE
+# Translation of todolist in fr
 # Copyright (C) 2019
 # This file is distributed under the same license as the todolist package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
@@ -7,15 +7,15 @@ msgid ""
 msgstr ""
 "Project-Id-Version: todolist\n"
 "Report-Msgid-Bugs-To: https://github.com/Zren/plasma-applet-todolist\n"
-"POT-Creation-Date: 2019-08-16 12:36+0900\n"
+"POT-Creation-Date: 2019-03-13 19:33-0400\n"
 "PO-Revision-Date: 2019-08-16 12:47+0900\n"
+"Last-Translator: \n"
+"Language-Team: \n"
+"Language: fr_FR\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "X-Generator: Poedit 2.2.1\n"
-"Last-Translator: \n"
-"Language-Team: \n"
-"Language: fr_FR\n"
 
 #: ../contents/config/config.qml:6
 msgid "General"
@@ -87,4 +87,5 @@ msgstr "Liste des suppressions"
 
 #: ../contents/ui/NoteSection.qml:158
 msgid "Are you sure you want to delete the list \"%1\" with %2 items?"
-msgstr "Êtes-vous sûr(e) de vouloir supprimer la liste \"%1\" contenant %2 objets?"
+msgstr ""
+"Êtes-vous sûr(e) de vouloir supprimer la liste \"%1\" contenant %2 objets?"
