--- a/package/translate/hr.po
+++ b/package/translate/hr.po
@@ -1,4 +1,4 @@
-# Translation of todolist in LANGUAGE
+# Translation of todolist in hr
 # Copyright (C) 2019
 # This file is distributed under the same license as the todolist package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
@@ -14,7 +14,7 @@ msgstr ""
 "Language-Team: Croatian <LL@li.org>\n"
 "Language: hr\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=CHARSET\n"
+"Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 
 #: ../contents/config/config.qml:6
