--- a/package/translate/nl.po
+++ b/package/translate/nl.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: todolist\n"
 "Report-Msgid-Bugs-To: https://github.com/Zren/plasma-applet-todolist\n"
 "POT-Creation-Date: 2021-02-06 21:14-0500\n"
-"PO-Revision-Date: 2019-03-31 17:10+0200\n"
+"PO-Revision-Date: 2021-02-07 12:35+0100\n"
 "Last-Translator: Heimen Stoffels <vistausss@outlook.com>\n"
 "Language-Team: Dutch <vistausss@outlook.com>\n"
 "Language: nl_NL\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 2.1.1\n"
+"X-Generator: Poedit 2.4.2\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
 #: ../contents/config/config.qml
@@ -32,15 +32,15 @@ msgstr "Bureaubladwidget: achtergrond tonen"
 
 #: ../contents/ui/config/ConfigGeneral.qml
 msgid "Note Filename"
-msgstr ""
+msgstr "Notitie-bestandsnaam"
 
 #: ../contents/ui/config/ConfigGeneral.qml
 msgid "Use Global Note"
-msgstr ""
+msgstr "Globale notitie gebruiken"
 
 #: ../contents/ui/config/ConfigGeneral.qml
 msgid "Filename:"
-msgstr ""
+msgstr "Bestandsnaam:"
 
 #: ../contents/ui/config/ConfigGeneral.qml
 msgid "Completed Items"
@@ -72,31 +72,31 @@ msgstr "Randen tonen"
 
 #: ../contents/ui/config/ConfigGeneral.qml
 msgid "Counter style"
-msgstr ""
+msgstr "Stijl van teller"
 
 #: ../contents/ui/config/ConfigGeneral.qml
 msgid "Show counter:"
-msgstr ""
+msgstr "Teller tonen:"
 
 #: ../contents/ui/config/ConfigGeneral.qml
 msgid "Never"
-msgstr ""
+msgstr "Nooit"
 
 #: ../contents/ui/config/ConfigGeneral.qml
 msgid "Incomplete items are left"
-msgstr ""
+msgstr "Bij onvoltooide items"
 
 #: ../contents/ui/config/ConfigGeneral.qml
 msgid "Always"
-msgstr ""
+msgstr "Altijd"
 
 #: ../contents/ui/config/ConfigGeneral.qml
 msgid "Use big counter"
-msgstr ""
+msgstr "Grote teller"
 
 #: ../contents/ui/config/ConfigGeneral.qml
 msgid "Use round counter"
-msgstr ""
+msgstr "Ronde teller"
 
 #: ../contents/ui/lib/AppletVersion.qml
 msgid "<b>Version:</b> %1"
@@ -124,8 +124,7 @@ msgstr "Lijst verwijderen"
 
 #: ../contents/ui/NoteSection.qml
 msgid "Are you sure you want to delete the list \"%1\" with %2 items?"
-msgstr ""
-"Weet je zeker dat je de lijst \"%1\", met daarop %2 taken, wilt verwijderen?"
+msgstr "Weet je zeker dat je '%1', met daarop %2 taken, wilt verwijderen?"
 
 #~ msgid "Show text field background"
 #~ msgstr "Achtergrond in tekstveld tonen"
