--- a/package/translate/fr.po
+++ b/package/translate/fr.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: todolist\n"
 "Report-Msgid-Bugs-To: https://github.com/Zren/plasma-applet-todolist\n"
 "POT-Creation-Date: 2021-02-06 21:14-0500\n"
-"PO-Revision-Date: 2019-08-16 12:47+0900\n"
+"PO-Revision-Date: 2021-02-08 18:42+0900\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: fr_FR\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 2.2.1\n"
+"X-Generator: Poedit 2.3\n"
 
 #: ../contents/config/config.qml
 msgid "General"
@@ -31,15 +31,15 @@ msgstr "Widget de bureau: Afficher l'arrière plan"
 
 #: ../contents/ui/config/ConfigGeneral.qml
 msgid "Note Filename"
-msgstr ""
+msgstr "Nom du fichier de Note"
 
 #: ../contents/ui/config/ConfigGeneral.qml
 msgid "Use Global Note"
-msgstr ""
+msgstr "Utiliser une Note globale"
 
 #: ../contents/ui/config/ConfigGeneral.qml
 msgid "Filename:"
-msgstr ""
+msgstr "Nom de fichier:"
 
 #: ../contents/ui/config/ConfigGeneral.qml
 msgid "Completed Items"
@@ -71,31 +71,31 @@ msgstr "Afficher"
 
 #: ../contents/ui/config/ConfigGeneral.qml
 msgid "Counter style"
-msgstr ""
+msgstr "Style de compteur"
 
 #: ../contents/ui/config/ConfigGeneral.qml
 msgid "Show counter:"
-msgstr ""
+msgstr "Afficher le compteur:"
 
 #: ../contents/ui/config/ConfigGeneral.qml
 msgid "Never"
-msgstr ""
+msgstr "Jamais"
 
 #: ../contents/ui/config/ConfigGeneral.qml
 msgid "Incomplete items are left"
-msgstr ""
+msgstr "Les objets incomplets seront abandonnés"
 
 #: ../contents/ui/config/ConfigGeneral.qml
 msgid "Always"
-msgstr ""
+msgstr "Toujours"
 
 #: ../contents/ui/config/ConfigGeneral.qml
 msgid "Use big counter"
-msgstr ""
+msgstr "Utiliser un grand compteur"
 
 #: ../contents/ui/config/ConfigGeneral.qml
 msgid "Use round counter"
-msgstr ""
+msgstr "Utiliser un compteur rond"
 
 #: ../contents/ui/lib/AppletVersion.qml
 msgid "<b>Version:</b> %1"
@@ -123,8 +123,4 @@ msgstr "Liste des suppressions"
 
 #: ../contents/ui/NoteSection.qml
 msgid "Are you sure you want to delete the list \"%1\" with %2 items?"
-msgstr ""
-"Êtes-vous sûr(e) de vouloir supprimer la liste \"%1\" contenant %2 objets?"
-
-#~ msgid "Show text field background"
-#~ msgstr "Afficher le fond des champs de texte"
+msgstr "Êtes-vous sûr(e) de vouloir supprimer la liste \"%1\" contenant %2 objets?"
