--- a/package/translate/PT.pot
+++ b/package/translate/PT.pot
@@ -1,7 +1,7 @@
-# Translation of todolist in LANGUAGE
+# Translation of todolist in Portuguese
 # Copyright (C) 2021
 # This file is distributed under the same license as the todolist package.
-# FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
+# FIRST AUTHOR <EMAIL@ADRESS>, YEAR.
 #
 #, fuzzy
 msgid ""
@@ -9,118 +9,118 @@ msgstr ""
 "Project-Id-Version: todolist \n"
 "Report-Msgid-Bugs-To: https://github.com/Zren/plasma-applet-todolist\n"
 "POT-Creation-Date: 2021-02-06 21:14-0500\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
+"PO-Revision-Date: 2021-03-09 11:31+0\n"
+"Last-Translator: DMLeal <dmleal.doc@gmail.com>\n"
+"Language-Team: Portuguese <dmleal.doc@gmail.com>\n"
+"Language: pt_PT\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=CHARSET\n"
 "Content-Transfer-Encoding: 8bit\n"
 
 #: ../contents/config/config.qml
 msgid "General"
-msgstr ""
+msgstr "Geral"
 
 #: ../contents/ui/config/ConfigGeneral.qml
 msgid "Desktop Widget: Hide"
-msgstr ""
+msgstr "Aplicativo na área de trabalho: Ocultar"
 
 #: ../contents/ui/config/ConfigGeneral.qml
 msgid "Desktop Widget: Show background"
-msgstr ""
+msgstr "Aplicativo na área de trabalho: Mostrar plano de fundo"
 
 #: ../contents/ui/config/ConfigGeneral.qml
 msgid "Note Filename"
-msgstr ""
+msgstr "Nome da ficheiro"
 
 #: ../contents/ui/config/ConfigGeneral.qml
 msgid "Use Global Note"
-msgstr ""
+msgstr "Usar o Nome Genérico"
 
 #: ../contents/ui/config/ConfigGeneral.qml
 msgid "Filename:"
-msgstr ""
+msgstr "Nome do Arquivo:"
 
 #: ../contents/ui/config/ConfigGeneral.qml
 msgid "Completed Items"
-msgstr ""
+msgstr "Itens Concluídos"
 
 #: ../contents/ui/config/ConfigGeneral.qml
 msgid "Delete On Complete"
-msgstr ""
+msgstr "Apagar ao Concluir"
 
 #: ../contents/ui/config/ConfigGeneral.qml
 msgid "Strikeout"
-msgstr ""
+msgstr "Rasurado"
 
 #: ../contents/ui/config/ConfigGeneral.qml
 msgid "Faded"
-msgstr ""
+msgstr "Desvanecido"
 
 #: ../contents/ui/config/ConfigGeneral.qml
 msgid "List Title Style"
-msgstr ""
+msgstr "Estilo do título da lista"
 
 #: ../contents/ui/config/ConfigGeneral.qml
 msgid "Bold"
-msgstr ""
+msgstr "Negrito"
 
 #: ../contents/ui/config/ConfigGeneral.qml
 msgid "Show outline"
-msgstr ""
+msgstr "Mostrar sublinhado"
 
 #: ../contents/ui/config/ConfigGeneral.qml
 msgid "Counter style"
-msgstr ""
+msgstr "Estilo do contador"
 
 #: ../contents/ui/config/ConfigGeneral.qml
 msgid "Show counter:"
-msgstr ""
+msgstr "Mostrar contador"
 
 #: ../contents/ui/config/ConfigGeneral.qml
 msgid "Never"
-msgstr ""
+msgstr "Nunca"
 
 #: ../contents/ui/config/ConfigGeneral.qml
 msgid "Incomplete items are left"
-msgstr ""
+msgstr "Restam itens por fazer"
 
 #: ../contents/ui/config/ConfigGeneral.qml
 msgid "Always"
-msgstr ""
+msgstr "Sempre"
 
 #: ../contents/ui/config/ConfigGeneral.qml
 msgid "Use big counter"
-msgstr ""
+msgstr "Usar contador grande"
 
 #: ../contents/ui/config/ConfigGeneral.qml
 msgid "Use round counter"
-msgstr ""
+msgstr "Usar contador redondo"
 
 #: ../contents/ui/lib/AppletVersion.qml
 msgid "<b>Version:</b> %1"
-msgstr ""
+msgstr "<b>Versão:</b> %1"
 
 #: ../contents/ui/main.qml
 msgid "Open in Text Editor"
-msgstr ""
+msgstr "Abrir no Editor de Texto"
 
 #: ../contents/ui/main.qml
 msgid "Add List"
-msgstr ""
+msgstr "Adicionar Lista"
 
 #: ../contents/ui/main.qml
 msgid "Delete on Complete"
-msgstr ""
+msgstr "Apagar Completamente"
 
 #: ../contents/ui/main.qml
 msgid "Hide"
-msgstr ""
+msgstr "Esconder"
 
 #: ../contents/ui/NoteSection.qml
 msgid "Delete List"
-msgstr ""
+msgstr "Apagar Lista"
 
 #: ../contents/ui/NoteSection.qml
 msgid "Are you sure you want to delete the list \"%1\" with %2 items?"
-msgstr ""
+msgstr "Tem a certeza que deseja excluir a lista \ "% 1 \" com %2 itens?"
