--- a/package/translate/pt.po
+++ b/package/translate/pt.po
@@ -14,7 +14,7 @@ msgstr ""
 "Language-Team: Portuguese <dmleal.doc@gmail.com>\n"
 "Language: pt_PT\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=CHARSET\n"
+"Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 
 #: ../contents/config/config.qml
