--- a/package/translate/template.pot
+++ b/package/translate/template.pot
@@ -6,16 +6,20 @@
 #, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: todolist \n"
+"Project-Id-Version: todolist\n"
 "Report-Msgid-Bugs-To: https://github.com/Zren/plasma-applet-todolist\n"
-"POT-Creation-Date: 2021-02-06 21:14-0500\n"
+"POT-Creation-Date: 2021-03-09 14:41-0500\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "Language: \n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=CHARSET\n"
+"Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+
+#: ../metadata.desktop
+msgid "TodoList"
+msgstr ""
 
 #: ../contents/config/config.qml
 msgid "General"
